syntax = "proto3";

option csharp_namespace = "T4C_Cluster.API";

package configuration;

// The greeting service definition.
service Configuration {
  // Sends a greeting
  rpc GetMessageOfTheDay (MessageOfTheDayRequest) returns (MessageOfTheDayReply);
}

// The request message containing the user's name.
message MessageOfTheDayRequest {
}

// The response message containing the greetings.
message MessageOfTheDayReply {
  string message = 1;
}